--- a/package.json
+++ b/package.json
@@ -1,18 +1,39 @@
 {
-  "name": "code-app",
-  "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "name": "qr-app",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
+    "@types/jest": "24.0.11",
+    "@types/node": "11.13.7",
+    "@types/react": "16.8.14",
+    "@types/react-dom": "16.8.4",
+    "@types/react-webcam": "^1.1.0",
     "jsqr": "^1.2.0",
-    "next": "^8.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
-    "react-webcam": "^1.1.1"
+    "react-scripts": "3.0.0",
+    "react-webcam": "^1.1.1",
+    "typescript": "3.4.5"
   },
   "scripts": {
-    "dev": "next",
-    "build": "next build",
-    "start": "next start"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
