--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ionic/core": "^4.3.0",
+    "@ionic/react": "^0.0.5",
     "@types/jest": "24.0.11",
     "@types/node": "11.13.7",
     "@types/react": "16.8.14",
@@ -11,6 +13,8 @@
     "jsqr": "^1.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router": "^5.0.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "3.0.0",
     "react-webcam": "^1.1.1",
     "typescript": "3.4.5"
